# curso_rust

./: README.md
modulo01/aula01/: main
modulo01/aula03/: Cargo.toml
modulo02/aula01/: Cargo.toml
modulo02/aula01/src/: main.rs
modulo02/aula02/src/: main.rs
modulo03/aula01/src/: main.rs
modulo03/aula02/src/: main.rs
modulo03/aula03/src/: main.rs
modulo04/aula01/src/: main.rs
modulo04/aula02/src/: main.rs
modulo04/aula03/src/: main.rs
modulo04/aula04/src/: main.rs
modulo04/aula05/: Cargo.toml
modulo04/aula05/src/: main.rs
modulo04/aula06/: Cargo.toml
modulo04/aula06/src/: main.rs
modulo05/aula01/src/: main.rs
modulo05/aula02/: Cargo.toml
modulo05/aula02/src/: main.rs
modulo05/aula03/src/: main.rs
modulo05/aula04/: Cargo.toml
modulo05/aula04/src/: main.rs
modulo05/aula05/src/: main.rs
modulo07/aula01/src/: main.rs
modulo07/aula02/src/: main.rs
modulo07/aula03/src/: main.rs
modulo08/aula01/src/: main.rs
modulo08/aula02/src/: main.rs  matematica.rs
modulo08/aula03/src/: main.rs
modulo08/aula03/src/operacoes/: mod.rs
modulo08/aula04/: Cargo.toml
modulo08/aula04/src/: main.rs
modulo08/aula05/: Cargo.toml
modulo08/aula05/src/: main.rs
modulo09/aula01/: Cargo.toml
modulo09/aula01/src/: lib.rs
modulo09/aula02/: Cargo.toml
modulo09/aula02/src/: main.rs
modulo10/aula01/src/: main.rs
modulo10/aula02/src/: main.rs
modulo10/aula03/src/: main.rs
modulo11/aula01/src/: arquivo.rs  main.rs
modulo11/aula02/src/: arquivo.rs  main.rs
